# discord-music-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.dev.yaml  docker-compose.yaml  lavalink.example.yaml  pyproject.toml
.github/workflows/: docker-image.yaml  pre-commit.yaml
discord_music_bot/: __init__.py  __main__.py  client.py  commands.py  compat.py  config.py  errors.py  events.py  helpers.py  main.py
discord_music_bot/commands/: __init__.py  audio.py  base.py  queue.py  streaming.py
