[tool.poetry]
name = "discord-music-bot"
version = "1.0.0"
description = ""
authors = ["Andrew Yatsura <andrewyazura203@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "discord_music_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
environs = "^9.5.0"
validators = "^0.20.0"
discord-py = {extras = ["voice"], version = "^2.2.2"}
wavelink = "^2.1.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.0.1"
pylint = "^2.16.2"
types-requests = "^2.28.11.13"
pre-commit = "^3.1.1"
pyupgrade = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.pylint]
max-line-length = 79
disable = [
    "C0114",
    "C0115",
    "C0116"
]
